Price Calculator.ipynb

--- a/Price Calculator.ipynb
+++ b/Price Calculator.ipynb
@@ -11,7 +11,7 @@
     "    while True:\n",
     "        user_input = input(\"Enter the price of item or press 'q' to quit: \\n\")\n",
     "        if user_input.lower() == 'q':\n",
-    "            return user_input\n",
+    "            return 'q'\n",
     "        try:\n",
     "            price = float(user_input)\n",
     "            if price < 0:\n",
@@ -22,7 +22,7 @@
     "            print(\"Invalid input. Please enter a valid number.\")\n",
     "\n",
     "def print_summary(items, total):\n",
-    "    print(f\"\\nYour Bill total is Rs. {total}. Thanks for shopping with us. Hope you liked our service.\")\n",
+    "    print(f\"\\nYour Bill total is Rs. {total:.2f}. Thanks for shopping with us. Hope you liked our service.\")\n",
     "    print(\"\\nSummary of items you purchased:\")\n",
     "    for item in items:\n",
     "        print(item)\n",
@@ -41,9 +41,9 @@
     "        if user_input == 'q':\n",
     "            break\n",
     "        else:\n",
-    "            total += user_input\n",
+    "            total += float(user_input)\n",
     "            i += 1\n",
-    "            items.append(f\"{i}: Rs. {user_input}\")\n",
+    "            items.append(f\"{i}: Rs. {user_input:.2f}\")\n",
     "\n",
     "        print(f\"Order total so far: Rs. {total:.2f}\")\n",
     "\n",
